0.8.0/_sources/generated/statsmodels.genmod.generalized_linear_model.GLMResults.rst.txt
statsmodels.genmod.generalized_linear_model.GLMResults
======================================================

.. currentmodule:: statsmodels.genmod.generalized_linear_model

.. autoclass:: GLMResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~GLMResults.aic
    
    
      ~GLMResults.bic
    
    
      ~GLMResults.bse
    
    
      ~GLMResults.conf_int
    
    
      ~GLMResults.cov_params
    
    
      ~GLMResults.deviance
    
    
      ~GLMResults.f_test
    
    
      ~GLMResults.fittedvalues
    
    
      ~GLMResults.get_prediction
    
    
      ~GLMResults.initialize
    
    
      ~GLMResults.llf
    
    
      ~GLMResults.llnull
    
    
      ~GLMResults.load
    
    
      ~GLMResults.mu
    
    
      ~GLMResults.normalized_cov_params
    
    
      ~GLMResults.null
    
    
      ~GLMResults.null_deviance
    
    
      ~GLMResults.pearson_chi2
    
    
      ~GLMResults.plot_added_variable
    
    
      ~GLMResults.plot_ceres_residuals
    
    
      ~GLMResults.plot_partial_residuals
    
    
      ~GLMResults.predict
    
    
      ~GLMResults.pvalues
    
    
      ~GLMResults.remove_data
    
    
      ~GLMResults.resid_anscombe
    
    
      ~GLMResults.resid_deviance
    
    
      ~GLMResults.resid_pearson
    
    
      ~GLMResults.resid_response
    
    
      ~GLMResults.resid_working
    
    
      ~GLMResults.save
    
    
      ~GLMResults.summary
    
    
      ~GLMResults.summary2
    
    
      ~GLMResults.t_test
    
    
      ~GLMResults.tvalues
    
    
      ~GLMResults.wald_test
    
    
      ~GLMResults.wald_test_terms
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~GLMResults.use_t
   
   