v0.11.0/_sources/generated/statsmodels.genmod.generalized_linear_model.GLMResults.rst.txt
statsmodels.genmod.generalized\_linear\_model.GLMResults
========================================================

.. currentmodule:: statsmodels.genmod.generalized_linear_model

.. autoclass:: GLMResults
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~GLMResults.conf_int
      ~GLMResults.cov_params
      ~GLMResults.f_test
      ~GLMResults.get_hat_matrix_diag
      ~GLMResults.get_influence
      ~GLMResults.get_prediction
      ~GLMResults.initialize
      ~GLMResults.load
      ~GLMResults.normalized_cov_params
      ~GLMResults.plot_added_variable
      ~GLMResults.plot_ceres_residuals
      ~GLMResults.plot_partial_residuals
      ~GLMResults.predict
      ~GLMResults.remove_data
      ~GLMResults.save
      ~GLMResults.summary
      ~GLMResults.summary2
      ~GLMResults.t_test
      ~GLMResults.t_test_pairwise
      ~GLMResults.wald_test
      ~GLMResults.wald_test_terms
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~GLMResults.aic
      ~GLMResults.bic
      ~GLMResults.bse
      ~GLMResults.deviance
      ~GLMResults.fittedvalues
      ~GLMResults.llf
      ~GLMResults.llnull
      ~GLMResults.mu
      ~GLMResults.null
      ~GLMResults.null_deviance
      ~GLMResults.pearson_chi2
      ~GLMResults.pvalues
      ~GLMResults.resid_anscombe
      ~GLMResults.resid_anscombe_scaled
      ~GLMResults.resid_anscombe_unscaled
      ~GLMResults.resid_deviance
      ~GLMResults.resid_pearson
      ~GLMResults.resid_response
      ~GLMResults.resid_working
      ~GLMResults.tvalues
      ~GLMResults.use_t
   
   
   